2nd partial tuning of mlp

--- a/tuning/mlp.ipynb
+++ b/tuning/mlp.ipynb
@@ -12,6 +12,14 @@
       "PyTorch version: 2.4.1\n",
       "PyTorch Lightning version: 2.4.0\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mavillan/Library/Caches/pypoetry/virtualenvs/mcts-strength-variants-E8z0EJ47-py3.10/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
     }
    ],
    "source": [
@@ -953,13 +961,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-10-02 07:55:41,544] Using an existing study with name 'mlp' instead of creating a new one.\n"
+      "[I 2024-10-02 17:12:00,577] Using an existing study with name 'mlp' instead of creating a new one.\n"
      ]
     }
    ],
    "source": [
-    "do_optimize = False\n",
-    "timeout = 3600 * 13\n",
+    "do_optimize = True\n",
+    "timeout = 3600 * 14\n",
     "\n",
     "study = optuna.create_study(\n",
     "    study_name=\"mlp\",\n",
@@ -8172,7 +8180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
