rerun train of gbm models with refactor in preproc

--- a/train/mlp.ipynb
+++ b/train/mlp.ipynb
@@ -502,6 +502,7 @@
     "# Call the function\n",
     "df_train, numerical_cols, categorical_cols, encoder, scaler = process_train_data(\n",
     "    df_train,\n",
+    "    scale = True\n",
     ")\n",
     "\n",
     "# Print the results\n",
