some tweaks to catboost and xgboost notebook

--- a/train/catboost.ipynb
+++ b/train/catboost.ipynb
@@ -1080,83 +1080,90 @@
     }
    ],
    "source": [
-    "# Define the number of folds for cross-validation\n",
-    "num_folds = 5\n",
+    "def train_models(\n",
+    "        df_train,\n",
+    "        numerical_cols,\n",
+    "        categorical_cols,\n",
+    "        target='utility_agent1',\n",
+    "        num_folds=5,\n",
+    "        groups_col='GameRulesetName'\n",
+    "    ):\n",
+    "    # Define the number of folds for cross-validation\n",
+    "    gkf = GroupKFold(n_splits=num_folds)\n",
+    "    split_list = gkf.split(df_train, groups=df_train[groups_col])\n",
     "\n",
-    "# Define the column for stratified or group k-fold\n",
-    "groups_col = 'GameRulesetName'\n",
-    "gkf = GroupKFold(n_splits=num_folds)\n",
-    "split_list = gkf.split(df_train, groups=df_train[groups_col])\n",
+    "    # Define the parameters for CatBoost\n",
+    "    params = {\n",
+    "        'objective': \"RMSE\",\n",
+    "        'learning_rate': 0.05,\n",
+    "        'depth': 5,\n",
+    "        'iterations': 2000,\n",
+    "        'eval_metric': 'RMSE',\n",
+    "        'verbose': 25,\n",
+    "        'random_seed': 42,\n",
+    "    }\n",
     "\n",
-    "target = 'utility_agent1'\n",
+    "    trained_models = []\n",
+    "    oof = pd.DataFrame(index=df_train.index, columns=[f'{target}_true', f'{target}_pred'])\n",
+    "    oof_scores = []\n",
     "\n",
-    "# Define the parameters for CatBoost\n",
-    "params = {\n",
-    "    'objective': \"RMSE\" if target == 'utility_agent1' else \"Logloss\",\n",
-    "    'learning_rate': 0.05,\n",
-    "    'depth': 5,\n",
-    "    'iterations': 2000,\n",
-    "    'eval_metric': 'RMSE',\n",
-    "    'verbose': 25,\n",
-    "    'random_seed': 42,\n",
-    "}\n",
+    "    # Perform cross-validation\n",
+    "    for fold, (train_index, val_index) in enumerate(split_list, 1):\n",
+    "        print(f\"Fold {fold}\")\n",
+    "        \n",
+    "        # Split the data\n",
+    "        X_train, X_valid = df_train.iloc[train_index], df_train.iloc[val_index]\n",
+    "        y_train, y_valid = X_train[target], X_valid[target]\n",
     "\n",
-    "trained_models = []\n",
-    "oof = pd.DataFrame(index=df_train.index, columns=['utility_agent1_true', 'utility_agent1_pred'])\n",
-    "oof_scores = []\n",
+    "        # Initialize CatBoost Pool\n",
+    "        train_pool = cb.Pool(\n",
+    "            data=X_train[numerical_cols + categorical_cols],\n",
+    "            label=y_train,\n",
+    "            cat_features=categorical_cols\n",
+    "        )\n",
+    "        val_pool = cb.Pool(\n",
+    "            data=X_valid[numerical_cols + categorical_cols],\n",
+    "            label=y_valid,\n",
+    "            cat_features=categorical_cols\n",
+    "        )\n",
+    "        \n",
+    "        # Initialize CatBoost Regressor\n",
+    "        model = cb.CatBoostRegressor(**params)\n",
+    "        \n",
+    "        # Train the model\n",
+    "        model.fit(\n",
+    "            train_pool,\n",
+    "            eval_set=val_pool,\n",
+    "            use_best_model=True,\n",
+    "            verbose=25\n",
+    "        )\n",
+    "        \n",
+    "        # Save the trained model to the list\n",
+    "        trained_models.append(model)\n",
     "\n",
-    "# Perform cross-validation\n",
-    "for fold, (train_index, val_index) in enumerate(split_list, 1):\n",
-    "    print(f\"Fold {fold}\")\n",
-    "    \n",
-    "    # Split the data\n",
-    "    X_train, X_valid = df_train.iloc[train_index], df_train.iloc[val_index]\n",
-    "    y_train, y_valid = X_train[target], X_valid[target]\n",
+    "        # Predict on validation set\n",
+    "        y_pred = model.predict(val_pool)\n",
+    "        y_pred = np.clip(y_pred, -1, 1)\n",
+    "        \n",
+    "        # Compute RMSE on scaled values\n",
+    "        rmse = np.sqrt(np.mean((y_pred - y_valid) ** 2))\n",
+    "        print(f\"Fold {fold} - RMSE: {rmse}\")\n",
     "\n",
-    "    # Initialize CatBoost Pool\n",
-    "    train_pool = cb.Pool(\n",
-    "        data=X_train[numerical_cols + categorical_cols],\n",
-    "        label=y_train,\n",
-    "        cat_features=categorical_cols\n",
-    "    )\n",
-    "    val_pool = cb.Pool(\n",
-    "        data=X_valid[numerical_cols + categorical_cols],\n",
-    "        label=y_valid,\n",
-    "        cat_features=categorical_cols\n",
-    "    )\n",
-    "    \n",
-    "    # Initialize CatBoost Regressor\n",
-    "    model = cb.CatBoostRegressor(**params)\n",
-    "    \n",
-    "    # Train the model\n",
-    "    model.fit(\n",
-    "        train_pool,\n",
-    "        eval_set=val_pool,\n",
-    "        use_best_model=True,\n",
-    "        verbose=25\n",
-    "    )\n",
-    "    \n",
-    "    # Save the trained model to the list\n",
-    "    trained_models.append(model)\n",
+    "        # Save out-of-fold predictions\n",
+    "        oof.loc[val_index, f'{target}_true'] = y_valid\n",
+    "        oof.loc[val_index, f'{target}_pred'] = y_pred\n",
     "\n",
-    "    # Predict on validation set\n",
-    "    y_pred = model.predict(val_pool)\n",
-    "    y_pred = np.clip(y_pred, -1, 1)\n",
-    "    \n",
-    "    # Compute RMSE on scaled values\n",
-    "    rmse = np.sqrt(np.mean((y_pred - y_valid) ** 2))\n",
-    "    print(f\"Fold {fold} - RMSE: {rmse}\")\n",
+    "        # Save RMSE to the list\n",
+    "        oof_scores.append(rmse)\n",
     "\n",
-    "    # Save out-of-fold predictions\n",
-    "    oof.loc[val_index, 'utility_agent1_true'] = y_valid\n",
-    "    oof.loc[val_index, 'utility_agent1_pred'] = y_pred\n",
+    "    # Print the list of oof scores and average oof score\n",
+    "    print(\"List of oof scores:\", oof_scores)\n",
+    "    print(\"Average oof score:\", np.mean(oof_scores))\n",
     "\n",
-    "    # Save RMSE to the list\n",
-    "    oof_scores.append(rmse)\n",
+    "    return trained_models, oof, oof_scores\n",
     "\n",
-    "# Print the list of oof scores and average oof score\n",
-    "print(\"List of oof scores:\", oof_scores)\n",
-    "print(\"Average oof score:\", np.mean(oof_scores))\n",
+    "# Call the function\n",
+    "trained_models, oof, oof_scores = train_models(df_train, numerical_cols, categorical_cols)\n",
     "\n",
     "# save oof predictions\n",
     "oof.to_csv(path_results / 'oof_catboost.csv', index=False)"
