--- a/kaggle/mcts-xgboost-baseline.ipynb
+++ b/kaggle/mcts-xgboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "41a3f471",
+   "id": "67657bba",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-10-15T03:02:53.122824Z",
-     "iopub.status.busy": "2024-10-15T03:02:53.122442Z",
-     "iopub.status.idle": "2024-10-15T03:02:55.313382Z",
-     "shell.execute_reply": "2024-10-15T03:02:55.312147Z"
+     "iopub.execute_input": "2024-10-16T22:35:12.025538Z",
+     "iopub.status.busy": "2024-10-16T22:35:12.024377Z",
+     "iopub.status.idle": "2024-10-16T22:35:14.174441Z",
+     "shell.execute_reply": "2024-10-16T22:35:14.173401Z"
     },
     "papermill": {
-     "duration": 2.198661,
-     "end_time": "2024-10-15T03:02:55.315585",
+     "duration": 2.15875,
+     "end_time": "2024-10-16T22:35:14.177022",
      "exception": false,
-     "start_time": "2024-10-15T03:02:53.116924",
+     "start_time": "2024-10-16T22:35:12.018272",
      "status": "completed"
     },
     "tags": []
@@ -47,19 +47,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8153be41",
+   "id": "e421880e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T03:02:55.326229Z",
-     "iopub.status.busy": "2024-10-15T03:02:55.325163Z",
-     "iopub.status.idle": "2024-10-15T03:02:55.415933Z",
-     "shell.execute_reply": "2024-10-15T03:02:55.414870Z"
+     "iopub.execute_input": "2024-10-16T22:35:14.186900Z",
+     "iopub.status.busy": "2024-10-16T22:35:14.186364Z",
+     "iopub.status.idle": "2024-10-16T22:35:14.277144Z",
+     "shell.execute_reply": "2024-10-16T22:35:14.276159Z"
     },
     "papermill": {
-     "duration": 0.097569,
-     "end_time": "2024-10-15T03:02:55.418135",
+     "duration": 0.098707,
+     "end_time": "2024-10-16T22:35:14.279807",
      "exception": false,
-     "start_time": "2024-10-15T03:02:55.320566",
+     "start_time": "2024-10-16T22:35:14.181100",
      "status": "completed"
     },
     "tags": []
@@ -144,13 +144,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94b7b0e",
+   "id": "c153b617",
    "metadata": {
     "papermill": {
-     "duration": 0.0031,
-     "end_time": "2024-10-15T03:02:55.424872",
+     "duration": 0.00361,
+     "end_time": "2024-10-16T22:35:14.287475",
      "exception": false,
-     "start_time": "2024-10-15T03:02:55.421772",
+     "start_time": "2024-10-16T22:35:14.283865",
      "status": "completed"
     },
     "tags": []
@@ -163,19 +163,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1bd11cf2",
+   "id": "8b274368",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T03:02:55.433102Z",
-     "iopub.status.busy": "2024-10-15T03:02:55.432419Z",
-     "iopub.status.idle": "2024-10-15T03:03:29.214963Z",
-     "shell.execute_reply": "2024-10-15T03:03:29.213894Z"
+     "iopub.execute_input": "2024-10-16T22:35:14.297048Z",
+     "iopub.status.busy": "2024-10-16T22:35:14.296039Z",
+     "iopub.status.idle": "2024-10-16T22:35:49.232592Z",
+     "shell.execute_reply": "2024-10-16T22:35:49.231301Z"
     },
     "papermill": {
-     "duration": 33.792484,
-     "end_time": "2024-10-15T03:03:29.220538",
+     "duration": 34.948614,
+     "end_time": "2024-10-16T22:35:49.239780",
      "exception": false,
-     "start_time": "2024-10-15T03:02:55.428054",
+     "start_time": "2024-10-16T22:35:14.291166",
      "status": "completed"
     },
     "tags": []
@@ -609,19 +609,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b8087bf4",
+   "id": "69e81a51",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T03:03:29.230179Z",
-     "iopub.status.busy": "2024-10-15T03:03:29.229775Z",
-     "iopub.status.idle": "2024-10-15T03:03:38.322500Z",
-     "shell.execute_reply": "2024-10-15T03:03:38.321412Z"
+     "iopub.execute_input": "2024-10-16T22:35:49.250672Z",
+     "iopub.status.busy": "2024-10-16T22:35:49.250168Z",
+     "iopub.status.idle": "2024-10-16T22:35:58.529183Z",
+     "shell.execute_reply": "2024-10-16T22:35:58.528014Z"
     },
     "papermill": {
-     "duration": 9.100038,
-     "end_time": "2024-10-15T03:03:38.324629",
+     "duration": 9.28715,
+     "end_time": "2024-10-16T22:35:58.531423",
      "exception": false,
-     "start_time": "2024-10-15T03:03:29.224591",
+     "start_time": "2024-10-16T22:35:49.244273",
      "status": "completed"
     },
     "tags": []
@@ -651,19 +651,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d4237f7a",
+   "id": "3b1e7d0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T03:03:38.335028Z",
-     "iopub.status.busy": "2024-10-15T03:03:38.334104Z",
-     "iopub.status.idle": "2024-10-15T03:03:38.744769Z",
-     "shell.execute_reply": "2024-10-15T03:03:38.743794Z"
+     "iopub.execute_input": "2024-10-16T22:35:58.541971Z",
+     "iopub.status.busy": "2024-10-16T22:35:58.541575Z",
+     "iopub.status.idle": "2024-10-16T22:35:58.969302Z",
+     "shell.execute_reply": "2024-10-16T22:35:58.968140Z"
     },
     "papermill": {
-     "duration": 0.418126,
-     "end_time": "2024-10-15T03:03:38.746974",
+     "duration": 0.435952,
+     "end_time": "2024-10-16T22:35:58.971869",
      "exception": false,
-     "start_time": "2024-10-15T03:03:38.328848",
+     "start_time": "2024-10-16T22:35:58.535917",
      "status": "completed"
     },
     "tags": []
@@ -690,13 +690,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e5961ca",
+   "id": "ff5ce69a",
    "metadata": {
     "papermill": {
-     "duration": 0.004282,
-     "end_time": "2024-10-15T03:03:38.755934",
+     "duration": 0.004714,
+     "end_time": "2024-10-16T22:35:58.981557",
      "exception": false,
-     "start_time": "2024-10-15T03:03:38.751652",
+     "start_time": "2024-10-16T22:35:58.976843",
      "status": "completed"
     },
     "tags": []
@@ -709,19 +709,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ea6634c5",
+   "id": "83899095",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T03:03:38.766449Z",
-     "iopub.status.busy": "2024-10-15T03:03:38.766028Z",
-     "iopub.status.idle": "2024-10-15T03:03:38.778470Z",
-     "shell.execute_reply": "2024-10-15T03:03:38.777441Z"
+     "iopub.execute_input": "2024-10-16T22:35:58.993540Z",
+     "iopub.status.busy": "2024-10-16T22:35:58.992619Z",
+     "iopub.status.idle": "2024-10-16T22:35:59.006008Z",
+     "shell.execute_reply": "2024-10-16T22:35:59.004590Z"
     },
     "papermill": {
-     "duration": 0.020303,
-     "end_time": "2024-10-15T03:03:38.780723",
+     "duration": 0.021787,
+     "end_time": "2024-10-16T22:35:59.008243",
      "exception": false,
-     "start_time": "2024-10-15T03:03:38.760420",
+     "start_time": "2024-10-16T22:35:58.986456",
      "status": "completed"
     },
     "tags": []
@@ -821,13 +821,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c8d74e4",
+   "id": "b2d51ebd",
    "metadata": {
     "papermill": {
-     "duration": 0.004346,
-     "end_time": "2024-10-15T03:03:38.789758",
+     "duration": 0.004596,
+     "end_time": "2024-10-16T22:35:59.017873",
      "exception": false,
-     "start_time": "2024-10-15T03:03:38.785412",
+     "start_time": "2024-10-16T22:35:59.013277",
      "status": "completed"
     },
     "tags": []
@@ -840,19 +840,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1d08b3e0",
+   "id": "4e63d567",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T03:03:38.801586Z",
-     "iopub.status.busy": "2024-10-15T03:03:38.800907Z",
-     "iopub.status.idle": "2024-10-15T03:03:39.239707Z",
-     "shell.execute_reply": "2024-10-15T03:03:39.238615Z"
+     "iopub.execute_input": "2024-10-16T22:35:59.030189Z",
+     "iopub.status.busy": "2024-10-16T22:35:59.029805Z",
+     "iopub.status.idle": "2024-10-16T22:35:59.500682Z",
+     "shell.execute_reply": "2024-10-16T22:35:59.499607Z"
     },
     "papermill": {
-     "duration": 0.447886,
-     "end_time": "2024-10-15T03:03:39.242137",
+     "duration": 0.4805,
+     "end_time": "2024-10-16T22:35:59.503234",
      "exception": false,
-     "start_time": "2024-10-15T03:03:38.794251",
+     "start_time": "2024-10-16T22:35:59.022734",
      "status": "completed"
     },
     "tags": []
@@ -867,19 +867,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f4fa0cf7",
+   "id": "e661e86d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T03:03:39.253924Z",
-     "iopub.status.busy": "2024-10-15T03:03:39.252873Z",
-     "iopub.status.idle": "2024-10-15T03:03:39.261456Z",
-     "shell.execute_reply": "2024-10-15T03:03:39.260448Z"
+     "iopub.execute_input": "2024-10-16T22:35:59.515258Z",
+     "iopub.status.busy": "2024-10-16T22:35:59.514645Z",
+     "iopub.status.idle": "2024-10-16T22:35:59.524146Z",
+     "shell.execute_reply": "2024-10-16T22:35:59.523287Z"
     },
     "papermill": {
-     "duration": 0.016639,
-     "end_time": "2024-10-15T03:03:39.263672",
+     "duration": 0.017903,
+     "end_time": "2024-10-16T22:35:59.526286",
      "exception": false,
-     "start_time": "2024-10-15T03:03:39.247033",
+     "start_time": "2024-10-16T22:35:59.508383",
      "status": "completed"
     },
     "tags": []
@@ -887,10 +887,12 @@
    "outputs": [],
    "source": [
     "counter = 0\n",
+    "trained_models = None\n",
     "\n",
     "def predict(test: pl.DataFrame, sample_sub: pl.DataFrame):\n",
     "    \n",
-    "    global counter\n",
+    "    global counter, trained_models, numerical_cols, categorical_cols, encoder, scaler\n",
+    "    \n",
     "    if counter == 0:\n",
     "        trained_models,_,_ = train_models(\n",
     "            df_train, \n",
@@ -941,19 +943,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "58cc115e",
+   "id": "76aa4cab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T03:03:39.274969Z",
-     "iopub.status.busy": "2024-10-15T03:03:39.274102Z",
-     "iopub.status.idle": "2024-10-15T03:47:15.158010Z",
-     "shell.execute_reply": "2024-10-15T03:47:15.156985Z"
+     "iopub.execute_input": "2024-10-16T22:35:59.538127Z",
+     "iopub.status.busy": "2024-10-16T22:35:59.537701Z",
+     "iopub.status.idle": "2024-10-16T23:21:18.878312Z",
+     "shell.execute_reply": "2024-10-16T23:21:18.877033Z"
     },
     "papermill": {
-     "duration": 2615.892075,
-     "end_time": "2024-10-15T03:47:15.160479",
+     "duration": 2719.350191,
+     "end_time": "2024-10-16T23:21:18.881566",
      "exception": false,
-     "start_time": "2024-10-15T03:03:39.268404",
+     "start_time": "2024-10-16T22:35:59.531375",
      "status": "completed"
     },
     "tags": []
@@ -1399,13 +1401,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09f59cdf",
+   "id": "d0a04426",
    "metadata": {
     "papermill": {
-     "duration": 0.028501,
-     "end_time": "2024-10-15T03:47:15.217583",
+     "duration": 0.031154,
+     "end_time": "2024-10-16T23:21:18.944083",
      "exception": false,
-     "start_time": "2024-10-15T03:47:15.189082",
+     "start_time": "2024-10-16T23:21:18.912929",
      "status": "completed"
     },
     "tags": []
@@ -1450,14 +1452,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 2665.632473,
-   "end_time": "2024-10-15T03:47:16.167237",
+   "duration": 2770.953428,
+   "end_time": "2024-10-16T23:21:19.998434",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-10-15T03:02:50.534764",
+   "start_time": "2024-10-16T22:35:09.045006",
    "version": "2.6.0"
   }
  },
