Kaggle Notebook | mcts-lightgbm-baseline | Version 5

--- a/kaggle/mcts-lightgbm-baseline.ipynb
+++ b/kaggle/mcts-lightgbm-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5c243cac",
+   "id": "a76e3a15",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-10-31T23:54:57.178885Z",
-     "iopub.status.busy": "2024-10-31T23:54:57.177365Z",
-     "iopub.status.idle": "2024-10-31T23:55:01.596670Z",
-     "shell.execute_reply": "2024-10-31T23:55:01.593976Z"
+     "iopub.execute_input": "2024-11-01T15:52:11.722999Z",
+     "iopub.status.busy": "2024-11-01T15:52:11.721843Z",
+     "iopub.status.idle": "2024-11-01T15:52:15.449938Z",
+     "shell.execute_reply": "2024-11-01T15:52:15.448516Z"
     },
     "papermill": {
-     "duration": 4.433112,
-     "end_time": "2024-10-31T23:55:01.602445",
+     "duration": 3.737527,
+     "end_time": "2024-11-01T15:52:15.452711",
      "exception": false,
-     "start_time": "2024-10-31T23:54:57.169333",
+     "start_time": "2024-11-01T15:52:11.715184",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8f70974",
+   "id": "cd7f1fb4",
    "metadata": {
     "papermill": {
-     "duration": 0.005663,
-     "end_time": "2024-10-31T23:55:01.615372",
+     "duration": 0.002985,
+     "end_time": "2024-11-01T15:52:15.459315",
      "exception": false,
-     "start_time": "2024-10-31T23:55:01.609709",
+     "start_time": "2024-11-01T15:52:15.456330",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "53dd20bf",
+   "id": "bf28ff50",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-31T23:55:01.629924Z",
-     "iopub.status.busy": "2024-10-31T23:55:01.628745Z",
-     "iopub.status.idle": "2024-10-31T23:55:02.237514Z",
-     "shell.execute_reply": "2024-10-31T23:55:02.235522Z"
+     "iopub.execute_input": "2024-11-01T15:52:15.467901Z",
+     "iopub.status.busy": "2024-11-01T15:52:15.467343Z",
+     "iopub.status.idle": "2024-11-01T15:52:15.965613Z",
+     "shell.execute_reply": "2024-11-01T15:52:15.964400Z"
     },
     "papermill": {
-     "duration": 0.619282,
-     "end_time": "2024-10-31T23:55:02.240520",
+     "duration": 0.505679,
+     "end_time": "2024-11-01T15:52:15.968215",
      "exception": false,
-     "start_time": "2024-10-31T23:55:01.621238",
+     "start_time": "2024-11-01T15:52:15.462536",
      "status": "completed"
     },
     "tags": []
@@ -110,19 +110,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8b5773b5",
+   "id": "fbac1698",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-31T23:55:02.252904Z",
-     "iopub.status.busy": "2024-10-31T23:55:02.252088Z",
-     "iopub.status.idle": "2024-10-31T23:55:02.267574Z",
-     "shell.execute_reply": "2024-10-31T23:55:02.266025Z"
+     "iopub.execute_input": "2024-11-01T15:52:15.976814Z",
+     "iopub.status.busy": "2024-11-01T15:52:15.976369Z",
+     "iopub.status.idle": "2024-11-01T15:52:15.985660Z",
+     "shell.execute_reply": "2024-11-01T15:52:15.984507Z"
     },
     "papermill": {
-     "duration": 0.025234,
-     "end_time": "2024-10-31T23:55:02.270690",
+     "duration": 0.016211,
+     "end_time": "2024-11-01T15:52:15.987904",
      "exception": false,
-     "start_time": "2024-10-31T23:55:02.245456",
+     "start_time": "2024-11-01T15:52:15.971693",
      "status": "completed"
     },
     "tags": []
@@ -182,19 +182,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1c4cb340",
+   "id": "5677962c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-31T23:55:02.282258Z",
-     "iopub.status.busy": "2024-10-31T23:55:02.281675Z",
-     "iopub.status.idle": "2024-10-31T23:55:02.514568Z",
-     "shell.execute_reply": "2024-10-31T23:55:02.513111Z"
+     "iopub.execute_input": "2024-11-01T15:52:15.996944Z",
+     "iopub.status.busy": "2024-11-01T15:52:15.995988Z",
+     "iopub.status.idle": "2024-11-01T15:52:16.170640Z",
+     "shell.execute_reply": "2024-11-01T15:52:16.169596Z"
     },
     "papermill": {
-     "duration": 0.242382,
-     "end_time": "2024-10-31T23:55:02.517618",
+     "duration": 0.181871,
+     "end_time": "2024-11-01T15:52:16.173230",
      "exception": false,
-     "start_time": "2024-10-31T23:55:02.275236",
+     "start_time": "2024-11-01T15:52:15.991359",
      "status": "completed"
     },
     "tags": []
@@ -214,18 +214,18 @@
    "source": [
     "# sanity check\n",
     "test = pd.read_csv(\"/kaggle/input/um-game-playing-strength-of-mcts-variants/test.csv\")\n",
-    "model_lgbm.predict(test)\n"
+    "model_lgbm.predict(test)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "599758b0",
+   "id": "8ae83397",
    "metadata": {
     "papermill": {
-     "duration": 0.004929,
-     "end_time": "2024-10-31T23:55:02.527463",
+     "duration": 0.003401,
+     "end_time": "2024-11-01T15:52:16.180256",
      "exception": false,
-     "start_time": "2024-10-31T23:55:02.522534",
+     "start_time": "2024-11-01T15:52:16.176855",
      "status": "completed"
     },
     "tags": []
@@ -238,19 +238,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0ff3e30a",
+   "id": "4abaa722",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-31T23:55:02.540117Z",
-     "iopub.status.busy": "2024-10-31T23:55:02.539344Z",
-     "iopub.status.idle": "2024-10-31T23:55:03.355604Z",
-     "shell.execute_reply": "2024-10-31T23:55:03.354002Z"
+     "iopub.execute_input": "2024-11-01T15:52:16.188845Z",
+     "iopub.status.busy": "2024-11-01T15:52:16.188446Z",
+     "iopub.status.idle": "2024-11-01T15:52:16.857751Z",
+     "shell.execute_reply": "2024-11-01T15:52:16.856622Z"
     },
     "papermill": {
-     "duration": 0.827353,
-     "end_time": "2024-10-31T23:55:03.359990",
+     "duration": 0.676585,
+     "end_time": "2024-11-01T15:52:16.860424",
      "exception": false,
-     "start_time": "2024-10-31T23:55:02.532637",
+     "start_time": "2024-11-01T15:52:16.183839",
      "status": "completed"
     },
     "tags": []
@@ -265,19 +265,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "797bcf56",
+   "id": "16fbbeb0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-31T23:55:03.374058Z",
-     "iopub.status.busy": "2024-10-31T23:55:03.372833Z",
-     "iopub.status.idle": "2024-10-31T23:55:03.382003Z",
-     "shell.execute_reply": "2024-10-31T23:55:03.380096Z"
+     "iopub.execute_input": "2024-11-01T15:52:16.870140Z",
+     "iopub.status.busy": "2024-11-01T15:52:16.869481Z",
+     "iopub.status.idle": "2024-11-01T15:52:16.875821Z",
+     "shell.execute_reply": "2024-11-01T15:52:16.874674Z"
     },
     "papermill": {
-     "duration": 0.019525,
-     "end_time": "2024-10-31T23:55:03.385041",
+     "duration": 0.014065,
+     "end_time": "2024-11-01T15:52:16.878421",
      "exception": false,
-     "start_time": "2024-10-31T23:55:03.365516",
+     "start_time": "2024-11-01T15:52:16.864356",
      "status": "completed"
     },
     "tags": []
@@ -294,19 +294,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0c2b358c",
+   "id": "0861a1da",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-31T23:55:03.397517Z",
-     "iopub.status.busy": "2024-10-31T23:55:03.396972Z",
-     "iopub.status.idle": "2024-10-31T23:55:04.015082Z",
-     "shell.execute_reply": "2024-10-31T23:55:04.013368Z"
+     "iopub.execute_input": "2024-11-01T15:52:16.887139Z",
+     "iopub.status.busy": "2024-11-01T15:52:16.886721Z",
+     "iopub.status.idle": "2024-11-01T15:52:17.398646Z",
+     "shell.execute_reply": "2024-11-01T15:52:17.397387Z"
     },
     "papermill": {
-     "duration": 0.628331,
-     "end_time": "2024-10-31T23:55:04.018498",
+     "duration": 0.519396,
+     "end_time": "2024-11-01T15:52:17.401461",
      "exception": false,
-     "start_time": "2024-10-31T23:55:03.390167",
+     "start_time": "2024-11-01T15:52:16.882065",
      "status": "completed"
     },
     "tags": []
@@ -328,13 +328,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5002af4a",
+   "id": "aeef678e",
    "metadata": {
     "papermill": {
-     "duration": 0.00438,
-     "end_time": "2024-10-31T23:55:04.027986",
+     "duration": 0.003264,
+     "end_time": "2024-11-01T15:52:17.408596",
      "exception": false,
-     "start_time": "2024-10-31T23:55:04.023606",
+     "start_time": "2024-11-01T15:52:17.405332",
      "status": "completed"
     },
     "tags": []
@@ -384,14 +384,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.630442,
-   "end_time": "2024-10-31T23:55:06.254836",
+   "duration": 9.282392,
+   "end_time": "2024-11-01T15:52:18.134848",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-10-31T23:54:53.624394",
+   "start_time": "2024-11-01T15:52:08.852456",
    "version": "2.6.0"
   }
  },
