changed CV strategy, updated lgb and catb

--- a/train/lightgbm.ipynb
+++ b/train/lightgbm.ipynb
@@ -38,7 +38,7 @@
     "import pickle\n",
     "\n",
     "import lightgbm as lgb\n",
-    "from sklearn.model_selection import GroupKFold\n",
+    "from sklearn.model_selection import StratifiedGroupKFold\n",
     "print(\"Lightgbm version:\", lgb.__version__)\n",
     "\n",
     "import sys\n",
@@ -514,6 +514,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "90bc323f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "e10c978a",
    "metadata": {},
@@ -964,103 +972,108 @@
     }
    ],
    "source": [
-    "# Define the number of folds for cross-validation\n",
-    "num_folds = 5\n",
+    "def train_models(\n",
+    "        df_train,\n",
+    "        numerical_cols,\n",
+    "        categorical_cols,\n",
+    "        target='utility_agent1',\n",
+    "        num_folds=5,\n",
+    "    ):\n",
+    "    # Define the number of folds for cross-validation\n",
+    "    group_col = \"GameRulesetName\"\n",
+    "    y_col = \"utility_agent1_rank\"\n",
+    "    gkf = StratifiedGroupKFold(n_splits=num_folds, random_state=2112, shuffle=True)\n",
+    "    split_list = gkf.split(df_train, groups=df_train[group_col], y=df_train[y_col])\n",
     "\n",
-    "# # Shuffle the train dataset\n",
-    "# df_train = df_train.sample(frac=1, random_state=2112).reset_index(drop=True)\n",
+    "    # Define the parameters\n",
+    "    params = {\n",
+    "        'objective': \"regression\",\n",
+    "        'metric': 'rmse',\n",
+    "        'boosting_type': 'gbdt',\n",
+    "        'num_leaves': 31,\n",
+    "        'max_depth': 10,\n",
+    "        'learning_rate': 0.1,\n",
+    "        'reg_alpha': 1e-1,\n",
+    "        'reg_lambda': 1e-1,\n",
+    "        'feature_fraction': 0.8,\n",
+    "        'verbose': -1,\n",
+    "        'seed': 2112,\n",
+    "    }\n",
     "\n",
-    "# Define the column for stratified or group k-fold\n",
-    "groups_col = 'GameRulesetName'\n",
-    "gkf = GroupKFold(n_splits=num_folds)\n",
-    "split_list = gkf.split(df_train, groups=df_train[groups_col])\n",
+    "    trained_models = []\n",
+    "    oof = pd.DataFrame(index=df_train.index, columns=[f'{target}_true', f'{target}_pred'])\n",
+    "    oof_scores = []\n",
+    "    feature_importances = []\n",
     "\n",
-    "target = 'utility_agent1'\n",
+    "    # Perform cross-validation\n",
+    "    for fold, (train_index, val_index) in enumerate(split_list, 1):\n",
+    "        print(f\"Fold {fold}\")\n",
+    "        \n",
+    "        # Split the data\n",
+    "        X_train, X_val = df_train.iloc[train_index], df_train.iloc[val_index]\n",
+    "        y_train, y_val = X_train[target], X_val[target]\n",
+    "        \n",
+    "        # Create LightGBM datasets\n",
+    "        train_data = lgb.Dataset(\n",
+    "            data=X_train[numerical_cols + categorical_cols],\n",
+    "            label=y_train,\n",
+    "            categorical_feature=categorical_cols,\n",
+    "            free_raw_data=True\n",
+    "        )\n",
+    "        val_data = lgb.Dataset(\n",
+    "            data=X_val[numerical_cols + categorical_cols],\n",
+    "            label=y_val,\n",
+    "            categorical_feature=categorical_cols,\n",
+    "            free_raw_data=True\n",
+    "        )\n",
     "\n",
-    "# Define the parameters\n",
-    "params = {\n",
-    "    'objective': \"regression\",\n",
-    "    'metric': 'rmse',\n",
-    "    'boosting_type': 'gbdt',\n",
-    "    'num_leaves': 31,\n",
-    "    'max_depth': 10,\n",
-    "    'learning_rate': 0.1,\n",
-    "    'reg_alpha': 1e-1,\n",
-    "    'reg_lambda': 1e-1,\n",
-    "    'feature_fraction': 0.8,\n",
-    "    # 'bagging_fraction': 0.9,\n",
-    "    #'bagging_freq': 1,\n",
-    "    'verbose': -1,\n",
-    "    'seed': 2112,\n",
-    "}\n",
+    "        # Train the model\n",
+    "        model = lgb.train(\n",
+    "            params,\n",
+    "            train_data,\n",
+    "            num_boost_round=2000,\n",
+    "            valid_sets=[val_data],\n",
+    "            callbacks=[\n",
+    "                lgb.log_evaluation(period=50),\n",
+    "            ]\n",
+    "        )\n",
+    "        lgb.plot_importance(model, figsize=(8, 20), importance_type='gain', max_num_features=100)\n",
+    "        plt.title('Top 50 Features by Importance')\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "        \n",
+    "        # Save the trained model to the list\n",
+    "        trained_models.append(model)\n",
     "\n",
-    "trained_models = []\n",
-    "oof = pd.DataFrame(index=df_train.index, columns=['utility_agent1_true', 'utility_agent1_pred'])\n",
-    "oof_scores = []\n",
-    "feature_importances = []\n",
+    "        # predict on validation set\n",
+    "        y_pred = model.predict(X_val[numerical_cols + categorical_cols])\n",
+    "        y_pred = np.clip(y_pred, -1, 1)\n",
+    "        \n",
+    "        # Compute RMSE on scaled values\n",
+    "        rmse = np.sqrt(np.mean((y_pred - y_val) ** 2))\n",
+    "        print(f\"Fold {fold} - RMSE: {rmse}\")\n",
     "\n",
-    "# Perform cross-validation\n",
-    "for fold, (train_index, val_index) in enumerate(split_list, 1):\n",
-    "    print(f\"Fold {fold}\")\n",
+    "        # Save out-of-fold predictions\n",
+    "        oof.loc[val_index, f'{target}_true'] = y_val\n",
+    "        oof.loc[val_index, f'{target}_pred'] = y_pred\n",
+    "\n",
+    "        # Save RMSE to the list\n",
+    "        oof_scores.append(rmse)\n",
+    "\n",
+    "    # Print the list of oof scores and average oof score\n",
+    "    print(\"List of oof scores:\", oof_scores)\n",
+    "    print(\"Average oof score:\", np.mean(oof_scores))\n",
+    "\n",
+    "    # save oof predictions\n",
+    "    oof.to_csv(path_results / 'oof_lightgbm.csv', index=False)\n",
     "    \n",
-    "    # Split the data\n",
-    "    X_train, X_val = df_train.iloc[train_index], df_train.iloc[val_index]\n",
-    "    y_train, y_val = X_train[target], X_val[target]\n",
-    "    \n",
-    "    # Create LightGBM datasets\n",
-    "    train_data = lgb.Dataset(\n",
-    "        data=X_train[numerical_cols + categorical_cols],\n",
-    "        label=y_train,\n",
-    "        categorical_feature=categorical_cols,\n",
-    "        free_raw_data=True\n",
-    "    )\n",
-    "    val_data = lgb.Dataset(\n",
-    "        data=X_val[numerical_cols + categorical_cols],\n",
-    "        label=y_val,\n",
-    "        categorical_feature=categorical_cols,\n",
-    "        free_raw_data=True\n",
-    "    )\n",
+    "    return trained_models, oof, oof_scores\n",
     "\n",
-    "    # Train the model\n",
-    "    model = lgb.train(\n",
-    "        params,\n",
-    "        train_data,\n",
-    "        num_boost_round=2000,\n",
-    "        valid_sets=[val_data],\n",
-    "        callbacks=[\n",
-    "            lgb.log_evaluation(period=50),\n",
-    "            # lgb.early_stopping(stopping_rounds=100)\n",
-    "        ]\n",
-    "    )\n",
-    "    lgb.plot_importance(model, figsize=(8, 20), importance_type='gain', max_num_features=100)\n",
-    "    plt.title('Top 50 Features by Importance')\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "    \n",
-    "    # Save the trained model to the list\n",
-    "    trained_models.append(model)\n",
-    "\n",
-    "    # predict on validation set\n",
-    "    y_pred = model.predict(X_val[numerical_cols + categorical_cols])\n",
-    "    y_pred = np.clip(y_pred, -1, 1)\n",
-    "    \n",
-    "    # Compute RMSE on scaled values\n",
-    "    rmse = np.sqrt(np.mean((y_pred - y_val) ** 2))\n",
-    "    print(f\"Fold {fold} - RMSE: {rmse}\")\n",
-    "\n",
-    "    # Save out-of-fold predictions\n",
-    "    oof.loc[val_index, 'utility_agent1_true'] = y_val\n",
-    "    oof.loc[val_index, 'utility_agent1_pred'] = y_pred\n",
-    "\n",
-    "    # Save RMSE to the list\n",
-    "    oof_scores.append(rmse)\n",
-    "\n",
-    "# Print the list of oof scores and average oof score\n",
-    "print(\"List of oof scores:\", oof_scores)\n",
-    "print(\"Average oof score:\", np.mean(oof_scores))\n",
+    "# Train the models\n",
+    "trained_models, oof, oof_scores = train_models(df_train, numerical_cols, categorical_cols)\n",
     "\n",
     "# save oof predictions\n",
-    "oof.to_csv(path_results / 'oof_lightgbm.csv', index=False)\n"
+    "oof.to_csv(path_results / 'oof_lightgbm.csv', index=False)"
    ]
   },
   {
@@ -1160,6 +1173,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sanity check\n",
+    "df_test = pl.read_csv('../data/raw/test.csv')\n",
+    "sample_sub = pl.read_csv('../data/raw/sample_submission.csv')\n",
+    "predict(df_test, sample_sub)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "377796df",
    "metadata": {},
@@ -1232,7 +1257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.12"
   },
   "papermill": {
    "default_parameters": {},
