--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e0790fa8",
+   "id": "a659a73f",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-02T03:59:26.104751Z",
-     "iopub.status.busy": "2024-11-02T03:59:26.103633Z",
-     "iopub.status.idle": "2024-11-02T03:59:28.932412Z",
-     "shell.execute_reply": "2024-11-02T03:59:28.931011Z"
+     "iopub.execute_input": "2024-11-08T06:49:41.076053Z",
+     "iopub.status.busy": "2024-11-08T06:49:41.074805Z",
+     "iopub.status.idle": "2024-11-08T06:49:43.626543Z",
+     "shell.execute_reply": "2024-11-08T06:49:43.625311Z"
     },
     "papermill": {
-     "duration": 2.838904,
-     "end_time": "2024-11-02T03:59:28.935400",
+     "duration": 2.560583,
+     "end_time": "2024-11-08T06:49:43.629463",
      "exception": false,
-     "start_time": "2024-11-02T03:59:26.096496",
+     "start_time": "2024-11-08T06:49:41.068880",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aca4a535",
+   "id": "f41911d3",
    "metadata": {
     "papermill": {
-     "duration": 0.004113,
-     "end_time": "2024-11-02T03:59:28.944313",
+     "duration": 0.002959,
+     "end_time": "2024-11-08T06:49:43.636070",
      "exception": false,
-     "start_time": "2024-11-02T03:59:28.940200",
+     "start_time": "2024-11-08T06:49:43.633111",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "537aeec9",
+   "id": "711eae6a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-02T03:59:28.955290Z",
-     "iopub.status.busy": "2024-11-02T03:59:28.954680Z",
-     "iopub.status.idle": "2024-11-02T03:59:33.648017Z",
-     "shell.execute_reply": "2024-11-02T03:59:33.646755Z"
+     "iopub.execute_input": "2024-11-08T06:49:43.644693Z",
+     "iopub.status.busy": "2024-11-08T06:49:43.643737Z",
+     "iopub.status.idle": "2024-11-08T06:49:47.224873Z",
+     "shell.execute_reply": "2024-11-08T06:49:47.223472Z"
     },
     "papermill": {
-     "duration": 4.701908,
-     "end_time": "2024-11-02T03:59:33.650800",
+     "duration": 3.588268,
+     "end_time": "2024-11-08T06:49:47.227494",
      "exception": false,
-     "start_time": "2024-11-02T03:59:28.948892",
+     "start_time": "2024-11-08T06:49:43.639226",
      "status": "completed"
     },
     "tags": []
@@ -110,24 +110,33 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c4040551",
+   "id": "6f5082de",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-02T03:59:33.662049Z",
-     "iopub.status.busy": "2024-11-02T03:59:33.661609Z",
-     "iopub.status.idle": "2024-11-02T03:59:33.673281Z",
-     "shell.execute_reply": "2024-11-02T03:59:33.671898Z"
+     "iopub.execute_input": "2024-11-08T06:49:47.236064Z",
+     "iopub.status.busy": "2024-11-08T06:49:47.235635Z",
+     "iopub.status.idle": "2024-11-08T06:49:47.246972Z",
+     "shell.execute_reply": "2024-11-08T06:49:47.245713Z"
     },
     "papermill": {
-     "duration": 0.020657,
-     "end_time": "2024-11-02T03:59:33.675942",
+     "duration": 0.018379,
+     "end_time": "2024-11-08T06:49:47.249302",
      "exception": false,
-     "start_time": "2024-11-02T03:59:33.655285",
+     "start_time": "2024-11-08T06:49:47.230923",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(numerical_cols): 296\n",
+      "len(categorical_cols):s 5\n"
+     ]
+    }
+   ],
    "source": [
     "class ModelInference:\n",
     "    def __init__(self, models, numerical_cols, categorical_cols, encoder, scaler):\n",
@@ -145,6 +154,9 @@
     "        self.categorical_cols = categorical_cols\n",
     "        self.encoder = encoder\n",
     "        self.scaler = scaler\n",
+    "\n",
+    "        print(\"len(numerical_cols):\", len(numerical_cols))\n",
+    "        print(\"len(categorical_cols):s\", len(categorical_cols))\n",
     "        \n",
     "    def predict(self, df_test):\n",
     "        \"\"\"Make predictions on test data\n",
@@ -185,19 +197,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "52855a11",
+   "id": "27bb641a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-02T03:59:33.687515Z",
-     "iopub.status.busy": "2024-11-02T03:59:33.686417Z",
-     "iopub.status.idle": "2024-11-02T03:59:33.908215Z",
-     "shell.execute_reply": "2024-11-02T03:59:33.906861Z"
+     "iopub.execute_input": "2024-11-08T06:49:47.257893Z",
+     "iopub.status.busy": "2024-11-08T06:49:47.257471Z",
+     "iopub.status.idle": "2024-11-08T06:49:47.452646Z",
+     "shell.execute_reply": "2024-11-08T06:49:47.451496Z"
     },
     "papermill": {
-     "duration": 0.230307,
-     "end_time": "2024-11-02T03:59:33.910981",
+     "duration": 0.202262,
+     "end_time": "2024-11-08T06:49:47.455113",
      "exception": false,
-     "start_time": "2024-11-02T03:59:33.680674",
+     "start_time": "2024-11-08T06:49:47.252851",
      "status": "completed"
     },
     "tags": []
@@ -206,7 +218,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.10122575, -0.14665217, -0.07864813])"
+       "array([ 0.06714281, -0.09123627, -0.05108708])"
       ]
      },
      "execution_count": 4,
@@ -222,13 +234,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b9c2e62",
+   "id": "60259123",
    "metadata": {
     "papermill": {
-     "duration": 0.004377,
-     "end_time": "2024-11-02T03:59:33.920130",
+     "duration": 0.00331,
+     "end_time": "2024-11-08T06:49:47.462158",
      "exception": false,
-     "start_time": "2024-11-02T03:59:33.915753",
+     "start_time": "2024-11-08T06:49:47.458848",
      "status": "completed"
     },
     "tags": []
@@ -241,19 +253,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2abf6695",
+   "id": "5ec54471",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-02T03:59:33.931194Z",
-     "iopub.status.busy": "2024-11-02T03:59:33.930747Z",
-     "iopub.status.idle": "2024-11-02T03:59:34.474383Z",
-     "shell.execute_reply": "2024-11-02T03:59:34.473151Z"
+     "iopub.execute_input": "2024-11-08T06:49:47.470989Z",
+     "iopub.status.busy": "2024-11-08T06:49:47.470463Z",
+     "iopub.status.idle": "2024-11-08T06:49:47.961842Z",
+     "shell.execute_reply": "2024-11-08T06:49:47.960005Z"
     },
     "papermill": {
-     "duration": 0.55261,
-     "end_time": "2024-11-02T03:59:34.477288",
+     "duration": 0.498846,
+     "end_time": "2024-11-08T06:49:47.964571",
      "exception": false,
-     "start_time": "2024-11-02T03:59:33.924678",
+     "start_time": "2024-11-08T06:49:47.465725",
      "status": "completed"
     },
     "tags": []
@@ -268,19 +280,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0efa7c73",
+   "id": "9b6f1ba2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-02T03:59:34.489156Z",
-     "iopub.status.busy": "2024-11-02T03:59:34.488552Z",
-     "iopub.status.idle": "2024-11-02T03:59:34.495330Z",
-     "shell.execute_reply": "2024-11-02T03:59:34.494133Z"
+     "iopub.execute_input": "2024-11-08T06:49:47.974169Z",
+     "iopub.status.busy": "2024-11-08T06:49:47.973567Z",
+     "iopub.status.idle": "2024-11-08T06:49:47.980231Z",
+     "shell.execute_reply": "2024-11-08T06:49:47.978820Z"
     },
     "papermill": {
-     "duration": 0.015456,
-     "end_time": "2024-11-02T03:59:34.497966",
+     "duration": 0.014228,
+     "end_time": "2024-11-08T06:49:47.982872",
      "exception": false,
-     "start_time": "2024-11-02T03:59:34.482510",
+     "start_time": "2024-11-08T06:49:47.968644",
      "status": "completed"
     },
     "tags": []
@@ -297,19 +309,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1559796f",
+   "id": "39e949f8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-02T03:59:34.510697Z",
-     "iopub.status.busy": "2024-11-02T03:59:34.510181Z",
-     "iopub.status.idle": "2024-11-02T03:59:35.137199Z",
-     "shell.execute_reply": "2024-11-02T03:59:35.135979Z"
+     "iopub.execute_input": "2024-11-08T06:49:47.992049Z",
+     "iopub.status.busy": "2024-11-08T06:49:47.991650Z",
+     "iopub.status.idle": "2024-11-08T06:49:48.569434Z",
+     "shell.execute_reply": "2024-11-08T06:49:48.568254Z"
     },
     "papermill": {
-     "duration": 0.637172,
-     "end_time": "2024-11-02T03:59:35.140108",
+     "duration": 0.585674,
+     "end_time": "2024-11-08T06:49:48.572428",
      "exception": false,
-     "start_time": "2024-11-02T03:59:34.502936",
+     "start_time": "2024-11-08T06:49:47.986754",
      "status": "completed"
     },
     "tags": []
@@ -331,13 +343,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f08c7596",
+   "id": "3a47ad66",
    "metadata": {
     "papermill": {
-     "duration": 0.004443,
-     "end_time": "2024-11-02T03:59:35.149319",
+     "duration": 0.003467,
+     "end_time": "2024-11-08T06:49:48.579789",
      "exception": false,
-     "start_time": "2024-11-02T03:59:35.144876",
+     "start_time": "2024-11-08T06:49:48.576322",
      "status": "completed"
     },
     "tags": []
@@ -358,7 +370,7 @@
     },
     {
      "datasetId": 5909723,
-     "sourceId": 9784617,
+     "sourceId": 9840918,
      "sourceType": "datasetVersion"
     }
    ],
@@ -387,14 +399,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.935858,
-   "end_time": "2024-11-02T03:59:35.976340",
+   "duration": 11.041831,
+   "end_time": "2024-11-08T06:49:49.306974",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-02T03:59:23.040482",
+   "start_time": "2024-11-08T06:49:38.265143",
    "version": "2.6.0"
   }
  },
