--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a659a73f",
+   "id": "c9e70281",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-08T06:49:41.076053Z",
-     "iopub.status.busy": "2024-11-08T06:49:41.074805Z",
-     "iopub.status.idle": "2024-11-08T06:49:43.626543Z",
-     "shell.execute_reply": "2024-11-08T06:49:43.625311Z"
+     "iopub.execute_input": "2024-11-12T03:41:54.568244Z",
+     "iopub.status.busy": "2024-11-12T03:41:54.567791Z",
+     "iopub.status.idle": "2024-11-12T03:41:57.532249Z",
+     "shell.execute_reply": "2024-11-12T03:41:57.530983Z"
     },
     "papermill": {
-     "duration": 2.560583,
-     "end_time": "2024-11-08T06:49:43.629463",
+     "duration": 2.974605,
+     "end_time": "2024-11-12T03:41:57.534866",
      "exception": false,
-     "start_time": "2024-11-08T06:49:41.068880",
+     "start_time": "2024-11-12T03:41:54.560261",
      "status": "completed"
     },
     "tags": []
@@ -45,19 +45,19 @@
     "sys.path.append(\"/kaggle/input/mcts-artifacts\")\n",
     "from preproc import process_test_data\n",
     "\n",
-    "from sklearn.model_selection import GroupKFold\n",
+    "from sklearn.model_selection import StratifiedGroupKFold\n",
     "from sklearn.preprocessing import OrdinalEncoder, StandardScaler"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f41911d3",
+   "id": "b4c37011",
    "metadata": {
     "papermill": {
-     "duration": 0.002959,
-     "end_time": "2024-11-08T06:49:43.636070",
+     "duration": 0.004304,
+     "end_time": "2024-11-12T03:41:57.543776",
      "exception": false,
-     "start_time": "2024-11-08T06:49:43.633111",
+     "start_time": "2024-11-12T03:41:57.539472",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "711eae6a",
+   "id": "0d5adf6a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-08T06:49:43.644693Z",
-     "iopub.status.busy": "2024-11-08T06:49:43.643737Z",
-     "iopub.status.idle": "2024-11-08T06:49:47.224873Z",
-     "shell.execute_reply": "2024-11-08T06:49:47.223472Z"
+     "iopub.execute_input": "2024-11-12T03:41:57.555084Z",
+     "iopub.status.busy": "2024-11-12T03:41:57.554048Z",
+     "iopub.status.idle": "2024-11-12T03:42:00.881268Z",
+     "shell.execute_reply": "2024-11-12T03:42:00.879962Z"
     },
     "papermill": {
-     "duration": 3.588268,
-     "end_time": "2024-11-08T06:49:47.227494",
+     "duration": 3.335777,
+     "end_time": "2024-11-12T03:42:00.884027",
      "exception": false,
-     "start_time": "2024-11-08T06:49:43.639226",
+     "start_time": "2024-11-12T03:41:57.548250",
      "status": "completed"
     },
     "tags": []
@@ -110,19 +110,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6f5082de",
+   "id": "d6b3833f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-08T06:49:47.236064Z",
-     "iopub.status.busy": "2024-11-08T06:49:47.235635Z",
-     "iopub.status.idle": "2024-11-08T06:49:47.246972Z",
-     "shell.execute_reply": "2024-11-08T06:49:47.245713Z"
+     "iopub.execute_input": "2024-11-12T03:42:00.895136Z",
+     "iopub.status.busy": "2024-11-12T03:42:00.894686Z",
+     "iopub.status.idle": "2024-11-12T03:42:00.906701Z",
+     "shell.execute_reply": "2024-11-12T03:42:00.905459Z"
     },
     "papermill": {
-     "duration": 0.018379,
-     "end_time": "2024-11-08T06:49:47.249302",
+     "duration": 0.020894,
+     "end_time": "2024-11-12T03:42:00.909655",
      "exception": false,
-     "start_time": "2024-11-08T06:49:47.230923",
+     "start_time": "2024-11-12T03:42:00.888761",
      "status": "completed"
     },
     "tags": []
@@ -132,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 296\n",
+      "len(numerical_cols): 368\n",
       "len(categorical_cols):s 5\n"
      ]
     }
@@ -197,19 +197,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "27bb641a",
+   "id": "0ff277da",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-08T06:49:47.257893Z",
-     "iopub.status.busy": "2024-11-08T06:49:47.257471Z",
-     "iopub.status.idle": "2024-11-08T06:49:47.452646Z",
-     "shell.execute_reply": "2024-11-08T06:49:47.451496Z"
+     "iopub.execute_input": "2024-11-12T03:42:00.920780Z",
+     "iopub.status.busy": "2024-11-12T03:42:00.920031Z",
+     "iopub.status.idle": "2024-11-12T03:42:01.178322Z",
+     "shell.execute_reply": "2024-11-12T03:42:01.177203Z"
     },
     "papermill": {
-     "duration": 0.202262,
-     "end_time": "2024-11-08T06:49:47.455113",
+     "duration": 0.266912,
+     "end_time": "2024-11-12T03:42:01.181155",
      "exception": false,
-     "start_time": "2024-11-08T06:49:47.252851",
+     "start_time": "2024-11-12T03:42:00.914243",
      "status": "completed"
     },
     "tags": []
@@ -218,7 +218,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.06714281, -0.09123627, -0.05108708])"
+       "array([ 0.1216964 , -0.12935903, -0.08922361])"
       ]
      },
      "execution_count": 4,
@@ -234,13 +234,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60259123",
+   "id": "9decfe9e",
    "metadata": {
     "papermill": {
-     "duration": 0.00331,
-     "end_time": "2024-11-08T06:49:47.462158",
+     "duration": 0.004485,
+     "end_time": "2024-11-12T03:42:01.190254",
      "exception": false,
-     "start_time": "2024-11-08T06:49:47.458848",
+     "start_time": "2024-11-12T03:42:01.185769",
      "status": "completed"
     },
     "tags": []
@@ -253,19 +253,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5ec54471",
+   "id": "fca7f51f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-08T06:49:47.470989Z",
-     "iopub.status.busy": "2024-11-08T06:49:47.470463Z",
-     "iopub.status.idle": "2024-11-08T06:49:47.961842Z",
-     "shell.execute_reply": "2024-11-08T06:49:47.960005Z"
+     "iopub.execute_input": "2024-11-12T03:42:01.201449Z",
+     "iopub.status.busy": "2024-11-12T03:42:01.201006Z",
+     "iopub.status.idle": "2024-11-12T03:42:01.683577Z",
+     "shell.execute_reply": "2024-11-12T03:42:01.682277Z"
     },
     "papermill": {
-     "duration": 0.498846,
-     "end_time": "2024-11-08T06:49:47.964571",
+     "duration": 0.491229,
+     "end_time": "2024-11-12T03:42:01.686278",
      "exception": false,
-     "start_time": "2024-11-08T06:49:47.465725",
+     "start_time": "2024-11-12T03:42:01.195049",
      "status": "completed"
     },
     "tags": []
@@ -280,19 +280,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9b6f1ba2",
+   "id": "53b0d8b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-08T06:49:47.974169Z",
-     "iopub.status.busy": "2024-11-08T06:49:47.973567Z",
-     "iopub.status.idle": "2024-11-08T06:49:47.980231Z",
-     "shell.execute_reply": "2024-11-08T06:49:47.978820Z"
+     "iopub.execute_input": "2024-11-12T03:42:01.698009Z",
+     "iopub.status.busy": "2024-11-12T03:42:01.697283Z",
+     "iopub.status.idle": "2024-11-12T03:42:01.704031Z",
+     "shell.execute_reply": "2024-11-12T03:42:01.702820Z"
     },
     "papermill": {
-     "duration": 0.014228,
-     "end_time": "2024-11-08T06:49:47.982872",
+     "duration": 0.015443,
+     "end_time": "2024-11-12T03:42:01.706595",
      "exception": false,
-     "start_time": "2024-11-08T06:49:47.968644",
+     "start_time": "2024-11-12T03:42:01.691152",
      "status": "completed"
     },
     "tags": []
@@ -309,19 +309,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "39e949f8",
+   "id": "fde391fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-08T06:49:47.992049Z",
-     "iopub.status.busy": "2024-11-08T06:49:47.991650Z",
-     "iopub.status.idle": "2024-11-08T06:49:48.569434Z",
-     "shell.execute_reply": "2024-11-08T06:49:48.568254Z"
+     "iopub.execute_input": "2024-11-12T03:42:01.717842Z",
+     "iopub.status.busy": "2024-11-12T03:42:01.717400Z",
+     "iopub.status.idle": "2024-11-12T03:42:02.357115Z",
+     "shell.execute_reply": "2024-11-12T03:42:02.355911Z"
     },
     "papermill": {
-     "duration": 0.585674,
-     "end_time": "2024-11-08T06:49:48.572428",
+     "duration": 0.648633,
+     "end_time": "2024-11-12T03:42:02.360024",
      "exception": false,
-     "start_time": "2024-11-08T06:49:47.986754",
+     "start_time": "2024-11-12T03:42:01.711391",
      "status": "completed"
     },
     "tags": []
@@ -343,13 +343,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a47ad66",
+   "id": "d62883f6",
    "metadata": {
     "papermill": {
-     "duration": 0.003467,
-     "end_time": "2024-11-08T06:49:48.579789",
+     "duration": 0.004483,
+     "end_time": "2024-11-12T03:42:02.369577",
      "exception": false,
-     "start_time": "2024-11-08T06:49:48.576322",
+     "start_time": "2024-11-12T03:42:02.365094",
      "status": "completed"
     },
     "tags": []
@@ -370,7 +370,7 @@
     },
     {
      "datasetId": 5909723,
-     "sourceId": 9840918,
+     "sourceId": 9879090,
      "sourceType": "datasetVersion"
     }
    ],
@@ -399,14 +399,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.041831,
-   "end_time": "2024-11-08T06:49:49.306974",
+   "duration": 11.526182,
+   "end_time": "2024-11-12T03:42:03.096942",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-08T06:49:38.265143",
+   "start_time": "2024-11-12T03:41:51.570760",
    "version": "2.6.0"
   }
  },
