Kaggle Notebook | mcts-catboost-baseline | Version 7

--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c9e70281",
+   "id": "c9f867ea",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-12T03:41:54.568244Z",
-     "iopub.status.busy": "2024-11-12T03:41:54.567791Z",
-     "iopub.status.idle": "2024-11-12T03:41:57.532249Z",
-     "shell.execute_reply": "2024-11-12T03:41:57.530983Z"
+     "iopub.execute_input": "2024-11-13T02:35:08.891157Z",
+     "iopub.status.busy": "2024-11-13T02:35:08.889627Z",
+     "iopub.status.idle": "2024-11-13T02:35:12.429298Z",
+     "shell.execute_reply": "2024-11-13T02:35:12.427872Z"
     },
     "papermill": {
-     "duration": 2.974605,
-     "end_time": "2024-11-12T03:41:57.534866",
+     "duration": 3.54997,
+     "end_time": "2024-11-13T02:35:12.432526",
      "exception": false,
-     "start_time": "2024-11-12T03:41:54.560261",
+     "start_time": "2024-11-13T02:35:08.882556",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4c37011",
+   "id": "e393dec9",
    "metadata": {
     "papermill": {
-     "duration": 0.004304,
-     "end_time": "2024-11-12T03:41:57.543776",
+     "duration": 0.00409,
+     "end_time": "2024-11-13T02:35:12.441394",
      "exception": false,
-     "start_time": "2024-11-12T03:41:57.539472",
+     "start_time": "2024-11-13T02:35:12.437304",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0d5adf6a",
+   "id": "6ae653b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-12T03:41:57.555084Z",
-     "iopub.status.busy": "2024-11-12T03:41:57.554048Z",
-     "iopub.status.idle": "2024-11-12T03:42:00.881268Z",
-     "shell.execute_reply": "2024-11-12T03:42:00.879962Z"
+     "iopub.execute_input": "2024-11-13T02:35:12.452329Z",
+     "iopub.status.busy": "2024-11-13T02:35:12.451693Z",
+     "iopub.status.idle": "2024-11-13T02:35:14.679857Z",
+     "shell.execute_reply": "2024-11-13T02:35:14.678482Z"
     },
     "papermill": {
-     "duration": 3.335777,
-     "end_time": "2024-11-12T03:42:00.884027",
+     "duration": 2.237337,
+     "end_time": "2024-11-13T02:35:14.683205",
      "exception": false,
-     "start_time": "2024-11-12T03:41:57.548250",
+     "start_time": "2024-11-13T02:35:12.445868",
      "status": "completed"
     },
     "tags": []
@@ -110,19 +110,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d6b3833f",
+   "id": "560fd1a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-12T03:42:00.895136Z",
-     "iopub.status.busy": "2024-11-12T03:42:00.894686Z",
-     "iopub.status.idle": "2024-11-12T03:42:00.906701Z",
-     "shell.execute_reply": "2024-11-12T03:42:00.905459Z"
+     "iopub.execute_input": "2024-11-13T02:35:14.694850Z",
+     "iopub.status.busy": "2024-11-13T02:35:14.694286Z",
+     "iopub.status.idle": "2024-11-13T02:35:14.707814Z",
+     "shell.execute_reply": "2024-11-13T02:35:14.706389Z"
     },
     "papermill": {
-     "duration": 0.020894,
-     "end_time": "2024-11-12T03:42:00.909655",
+     "duration": 0.023095,
+     "end_time": "2024-11-13T02:35:14.710980",
      "exception": false,
-     "start_time": "2024-11-12T03:42:00.888761",
+     "start_time": "2024-11-13T02:35:14.687885",
      "status": "completed"
     },
     "tags": []
@@ -132,31 +132,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 368\n",
-      "len(categorical_cols):s 5\n"
+      "len(numerical_cols): 370\n",
+      "len(categorical_cols): 5\n"
      ]
     }
    ],
    "source": [
     "class ModelInference:\n",
-    "    def __init__(self, models, numerical_cols, categorical_cols, encoder, scaler):\n",
+    "    def __init__(self, models, numerical_cols, categorical_cols, text_cols, encoder, scaler):\n",
     "        \"\"\"Initialize inference class with trained artifacts\n",
     "        \n",
     "        Args:\n",
     "            models: List of trained CatBoost models\n",
     "            numerical_cols: List of numerical column names\n",
     "            categorical_cols: List of categorical column names\n",
+    "            text_cols: List of text columns\n",
     "            encoder: Fitted OrdinalEncoder for categorical features\n",
     "            scaler: Fitted StandardScaler for numerical features (optional)\n",
     "        \"\"\"\n",
     "        self.models = models\n",
     "        self.numerical_cols = numerical_cols\n",
     "        self.categorical_cols = categorical_cols\n",
+    "        self.text_cols = text_cols\n",
     "        self.encoder = encoder\n",
     "        self.scaler = scaler\n",
     "\n",
     "        print(\"len(numerical_cols):\", len(numerical_cols))\n",
-    "        print(\"len(categorical_cols):s\", len(categorical_cols))\n",
+    "        print(\"len(categorical_cols):\", len(categorical_cols))\n",
     "        \n",
     "    def predict(self, df_test):\n",
     "        \"\"\"Make predictions on test data\n",
@@ -176,10 +178,11 @@
     "            self.scaler\n",
     "        )\n",
     "        \n",
-    "        # Create Pool dataset for CatBoost\n",
+    "        # Create CatBoost Pool for test data\n",
     "        test_pool = cb.Pool(\n",
-    "            data=test_processed[self.numerical_cols + self.categorical_cols],\n",
+    "            data=test_processed[self.numerical_cols + self.categorical_cols + self.text_cols],\n",
     "            cat_features=self.categorical_cols,\n",
+    "            text_features=self.text_cols,\n",
     "        )\n",
     "        \n",
     "        # Get predictions from all models\n",
@@ -191,25 +194,25 @@
     "        \n",
     "        return predictions\n",
     "\n",
-    "model_catboost = ModelInference(**catboost_artifacts)"
+    "model_catboost = ModelInference(text_cols=[\"LudRules\",], **catboost_artifacts)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0ff277da",
+   "id": "573077c3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-12T03:42:00.920780Z",
-     "iopub.status.busy": "2024-11-12T03:42:00.920031Z",
-     "iopub.status.idle": "2024-11-12T03:42:01.178322Z",
-     "shell.execute_reply": "2024-11-12T03:42:01.177203Z"
+     "iopub.execute_input": "2024-11-13T02:35:14.722300Z",
+     "iopub.status.busy": "2024-11-13T02:35:14.721827Z",
+     "iopub.status.idle": "2024-11-13T02:35:14.994510Z",
+     "shell.execute_reply": "2024-11-13T02:35:14.993210Z"
     },
     "papermill": {
-     "duration": 0.266912,
-     "end_time": "2024-11-12T03:42:01.181155",
+     "duration": 0.281761,
+     "end_time": "2024-11-13T02:35:14.997429",
      "exception": false,
-     "start_time": "2024-11-12T03:42:00.914243",
+     "start_time": "2024-11-13T02:35:14.715668",
      "status": "completed"
     },
     "tags": []
@@ -218,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.1216964 , -0.12935903, -0.08922361])"
+       "array([ 0.12990531, -0.17131387, -0.01485499])"
       ]
      },
      "execution_count": 4,
@@ -234,13 +237,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9decfe9e",
+   "id": "5374e56b",
    "metadata": {
     "papermill": {
-     "duration": 0.004485,
-     "end_time": "2024-11-12T03:42:01.190254",
+     "duration": 0.004566,
+     "end_time": "2024-11-13T02:35:15.006975",
      "exception": false,
-     "start_time": "2024-11-12T03:42:01.185769",
+     "start_time": "2024-11-13T02:35:15.002409",
      "status": "completed"
     },
     "tags": []
@@ -253,19 +256,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fca7f51f",
+   "id": "a8a27ec2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-12T03:42:01.201449Z",
-     "iopub.status.busy": "2024-11-12T03:42:01.201006Z",
-     "iopub.status.idle": "2024-11-12T03:42:01.683577Z",
-     "shell.execute_reply": "2024-11-12T03:42:01.682277Z"
+     "iopub.execute_input": "2024-11-13T02:35:15.021306Z",
+     "iopub.status.busy": "2024-11-13T02:35:15.019807Z",
+     "iopub.status.idle": "2024-11-13T02:35:15.608341Z",
+     "shell.execute_reply": "2024-11-13T02:35:15.606974Z"
     },
     "papermill": {
-     "duration": 0.491229,
-     "end_time": "2024-11-12T03:42:01.686278",
+     "duration": 0.598723,
+     "end_time": "2024-11-13T02:35:15.611359",
      "exception": false,
-     "start_time": "2024-11-12T03:42:01.195049",
+     "start_time": "2024-11-13T02:35:15.012636",
      "status": "completed"
     },
     "tags": []
@@ -280,19 +283,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "53b0d8b9",
+   "id": "f2b99df6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-12T03:42:01.698009Z",
-     "iopub.status.busy": "2024-11-12T03:42:01.697283Z",
-     "iopub.status.idle": "2024-11-12T03:42:01.704031Z",
-     "shell.execute_reply": "2024-11-12T03:42:01.702820Z"
+     "iopub.execute_input": "2024-11-13T02:35:15.623288Z",
+     "iopub.status.busy": "2024-11-13T02:35:15.622666Z",
+     "iopub.status.idle": "2024-11-13T02:35:15.629360Z",
+     "shell.execute_reply": "2024-11-13T02:35:15.628081Z"
     },
     "papermill": {
-     "duration": 0.015443,
-     "end_time": "2024-11-12T03:42:01.706595",
+     "duration": 0.015814,
+     "end_time": "2024-11-13T02:35:15.632091",
      "exception": false,
-     "start_time": "2024-11-12T03:42:01.691152",
+     "start_time": "2024-11-13T02:35:15.616277",
      "status": "completed"
     },
     "tags": []
@@ -309,19 +312,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fde391fb",
+   "id": "6db22205",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-12T03:42:01.717842Z",
-     "iopub.status.busy": "2024-11-12T03:42:01.717400Z",
-     "iopub.status.idle": "2024-11-12T03:42:02.357115Z",
-     "shell.execute_reply": "2024-11-12T03:42:02.355911Z"
+     "iopub.execute_input": "2024-11-13T02:35:15.644095Z",
+     "iopub.status.busy": "2024-11-13T02:35:15.643588Z",
+     "iopub.status.idle": "2024-11-13T02:35:16.373334Z",
+     "shell.execute_reply": "2024-11-13T02:35:16.372032Z"
     },
     "papermill": {
-     "duration": 0.648633,
-     "end_time": "2024-11-12T03:42:02.360024",
+     "duration": 0.73937,
+     "end_time": "2024-11-13T02:35:16.376660",
      "exception": false,
-     "start_time": "2024-11-12T03:42:01.711391",
+     "start_time": "2024-11-13T02:35:15.637290",
      "status": "completed"
     },
     "tags": []
@@ -343,13 +346,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62883f6",
+   "id": "f9bd7cb5",
    "metadata": {
     "papermill": {
-     "duration": 0.004483,
-     "end_time": "2024-11-12T03:42:02.369577",
+     "duration": 0.005549,
+     "end_time": "2024-11-13T02:35:16.387369",
      "exception": false,
-     "start_time": "2024-11-12T03:42:02.365094",
+     "start_time": "2024-11-13T02:35:16.381820",
      "status": "completed"
     },
     "tags": []
@@ -370,7 +373,7 @@
     },
     {
      "datasetId": 5909723,
-     "sourceId": 9879090,
+     "sourceId": 9889688,
      "sourceType": "datasetVersion"
     }
    ],
@@ -399,14 +402,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.526182,
-   "end_time": "2024-11-12T03:42:03.096942",
+   "duration": 11.631283,
+   "end_time": "2024-11-13T02:35:17.216457",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-12T03:41:51.570760",
+   "start_time": "2024-11-13T02:35:05.585174",
    "version": "2.6.0"
   }
  },
