--- a/train/catboost.ipynb
+++ b/train/catboost.ipynb
@@ -1527,6 +1527,7 @@
     "    'models': trained_models,\n",
     "    'numerical_cols': numerical_cols,\n",
     "    'categorical_cols': categorical_cols,\n",
+    "    'text_cols': text_cols,\n",
     "    'encoder': encoder, \n",
     "    'scaler': scaler\n",
     "}\n",
